--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.1",
+    "sweetalert": "^2.1.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
